--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
             <section class="left-side">
                 <p class="input-title">Selecciona la divisa</p>
                 <div class="currency-area">
-                    <input type="radio" name="currency" id="cop" class="input-radio">
+                    <input type="radio" name="currency" id="cop">
                     <label for="cop" class="currency">COP</label>
 
-                    <input type="radio" name="currency" id="usd" class="input-radio">
+                    <input type="radio" name="currency" id="usd">
                     <label for="usd" class="currency">USD</label>
 
-                    <input type="radio" name="currency" id="eur" class="input-radio">
+                    <input type="radio" name="currency" id="eur">
                     <label for="eur" class="currency">EUR</label>
                 </div>
 
@@ -135,6 +135,7 @@
             <p>Developed with <span class="hearth">💜</span> by Andrés López</p>
         </footer>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.2.1/chart.min.js" integrity="sha512-v3ygConQmvH0QehvQa6gSvTE2VdBZ6wkLOlmK7Mcy2mZ0ZF9saNbbk19QeaoTHdWIEiTlWmrwAL4hS8ElnGFbA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./assets/js/code.js"></script>
 </body>
 </html>
