Header update with logo

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <main class="main-container">
         <header class="header">
             <div class="header-container">
-                Andrés López
-            </div>
+                <a href="https://andreslopez.co/"><img src="./assets/img/logo.png" alt="AndresLopez.co Logo" class="logo" /></a>
+            </div>  
         </header>
 
         <div class="main-description">
